app/assets/stylesheets/components/_avatar.scss
.avatar {
  height: 40px;
  width: 40px;
  border-radius: 50%;
}

.avatar-large {
  width: 56px;
  border-radius: 50%;
}

.avatar-bordered {
  width: 40px;
  border-radius: 50%;
  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
  border: white 1px solid;
}

.avatar-square {
  width: 40px;
  border-radius: 0px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
  border: white 1px solid;
}

.avatar-small {
  width: 60px;
  border-radius: 50%;
  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
  border: white 1px solid;
}

.avatar-card {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  box-shadow: 0px 1px 1px rgba(0,0,0,0.2);
  border: white 1px solid;
}

